WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
170539
[GTK] Fix build with MEDIA_CAPTURE enabled
https://bugs.webkit.org/show_bug.cgi?id=170539
Summary
[GTK] Fix build with MEDIA_CAPTURE enabled
Adrian Perez
Reported
2017-04-06 00:21:45 PDT
Enabling MEDIA_CAPTURE (for exaple with “build-webkit --media-capture”) causes compilation to fail with the following error. .../Source/WebKit2/WebProcess/InjectedBundle/API/gtk/DOM/WebKitDOMDeprecated.cpp: In function ‘gboolean webkit_dom_html_input_element_get_capture(WebKitDOMHTMLInputElement*)’: .../Source/WebKit2/WebProcess/InjectedBundle/API/gtk/DOM/WebKitDOMDeprecated.cpp:168:40: error: ‘MediaCaptureTypeNone’ was not declared in this scope return item->mediaCaptureType() != MediaCaptureTypeNone; ^~~~~~~~~~~~~~~~~~~~ The definition is still around, but this code should be using “WebCore::MediaCaptureTypeNone”. I'll be posting a patch soon.
Attachments
Patch
(1.63 KB, patch)
2017-04-06 02:08 PDT
,
Adrian Perez
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Adrian Perez
Comment 1
2017-04-06 02:08:21 PDT
Created
attachment 306370
[details]
Patch
Carlos Garcia Campos
Comment 2
2017-04-06 02:57:16 PDT
***
Bug 170542
has been marked as a duplicate of this bug. ***
WebKit Commit Bot
Comment 3
2017-04-06 02:58:21 PDT
Comment on
attachment 306370
[details]
Patch Clearing flags on attachment: 306370 Committed
r215009
: <
http://trac.webkit.org/changeset/215009
>
WebKit Commit Bot
Comment 4
2017-04-06 02:58:23 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug