[GTK] Fix build with MEDIA_CAPTURE enabled https://bugs.webkit.org/show_bug.cgi?id=170539

Patch by Adrian Perez de Castro <aperez@igalia.com> on 2017-04-06
Reviewed by Carlos Garcia Campos.

* WebProcess/InjectedBundle/API/gtk/DOM/WebKitDOMDeprecated.cpp:
(webkit_dom_html_input_element_get_capture): Add missing namespace in usage of WebCore::MediaCaptureTypeNone.

Canonical link: https://commits.webkit.org/187468@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@215009 268f45cc-cd09-0410-ab3c-d52691b4dbfc